--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ torchvision>=0.9.0
 tqdm>=4.64.0
 onnx==1.16.2
 onnxruntime==1.19.0
+onnxruntime-gpu==1.19.0
 ultralytics>=8.2.34  # https://ultralytics.com
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
